<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/detailsTextView"
            android:text="@string/Product_Name" />

        <TextView
            android:id="@+id/name"
            style="@style/showTextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            style="@style/detailsTextView"
            android:text="@string/Price" />

        <TextView
            android:id="@+id/price"
            style="@style/showTextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/detailsTextView"
            android:text="@string/Quantity" />

        <TextView
            android:id="@+id/quantity"
            style="@style/showTextView" />
    </LinearLayout>

    <Button
        android:id="@+id/sell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sell" />
</LinearLayout>